istio-demo/service-1/k8s/service-1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-1
  labels:
    app: service-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-1
  template:
    metadata:
      labels:
        app: service-1
    spec:
      containers:
        - name: service-1
          image: gcr.io/istio-demo-project-440716/service-1:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-1
  labels:
    app: service-1
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: service-1
