istio-demo/service-1/k8s/service1-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: service-1-gateway
  namespace: sumanns  # Ensure this is your namespace
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-1-virtualservice
  namespace: sumanns  # Ensure this is your namespace
spec:
  hosts:
  - "*"
  gateways:
  - service-1-gateway
  http:
  - match:
    - uri:
        exact: /hello
    route:
    - destination:
        host: service-1.sumanns.svc.cluster.local  # Ensure the correct namespace
        port:
          number: 80
